--- a/main.css
+++ b/main.css
@@ -1,3 +1,4 @@
 @import "https://fonts.googleapis.com/icon?family=Material+Icons";
 @import "./modules/topNav/topNav.css";
 @import "./modules/mainContent/mainContent.css";
+@import "./modules/leftSideNav/leftSideNav.css";
