--- a/modules/topNav/topNav.css
+++ b/modules/topNav/topNav.css
@@ -7,10 +7,12 @@ body {
 .top-nav {
   position: fixed;
   top: 0;
-  z-index: 1;
   width: 100%;
   height: 4em;
-  box-shadow: 0px 0px 7px 0px #00000033; 
+  background-color: #FFFFFF;
+  border-bottom: 1px solid #ccc;
+  /* box-shadow: 0px 0px 7px 0px #00000033;  */
+  z-index: 1;
 }
 
 .top-nav>span {
@@ -19,7 +21,7 @@ body {
 }
 
 .primary-topNav {
-  margin-left: 2em;
+  margin-left: 2.5em;
 }
 
 .burger-icon {
@@ -77,7 +79,7 @@ body {
   vertical-align: middle;
 }
 
-.topNav-photo {
+.image {
   height: 2.2em;
   width: 2.2em;
   border-radius: 50%;
