--- a/main.css
+++ b/main.css
@@ -2,3 +2,4 @@
 @import "./modules/topNav/topNav.css";
 @import "./modules/mainContent/mainContent.css";
 @import "./modules/leftSideNav/leftSideNav.css";
+@import "./modules/mainContent/mainContent.css";
