--- a/modules/mainContent/mainContent.css
+++ b/modules/mainContent/mainContent.css
@@ -1,3 +1,38 @@
-/* .grid-contaniner {
-  height: 2em;
-} */
+.grid-container {
+  position: relative;
+  top: 4em;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  width: 100%;
+  height: auto;
+}
+
+.main-content {
+  position: relative;
+  left: 18em;
+  width: 76vw;
+  background-color: #F9F9F9;
+  height: 100%;
+  overflow-x: hidden;
+}
+
+.button-nav {
+  background-color: #fff;
+  width: 100%;
+  height: 4em;
+  border-top: 1px solid #E5E5E5;
+  border-bottom: 1px solid #E5E5E5;
+  padding: 0 1.5em;
+}
+
+.button-nav > button {
+  margin: 1.2em 0.5em;
+  width: auto;
+  height: 2.5em;
+  border: unset;
+  padding: 0 1em;
+  border: 1px solid #D9D9D9;
+  border-radius: 1.5em;
+}
+
+
