add burger icon widescreen

--- a/modules/topNav/topNav.css
+++ b/modules/topNav/topNav.css
@@ -27,6 +27,12 @@ body {
   color: #606060;
 }
 
+.burger-icon-widescreen {
+  display: none;
+  font-size: 1.2em;
+  color: #606060;
+}
+
 .logo {
   margin-left: 1.5em;
   color: #000;
