--- a/main.css
+++ b/main.css
@@ -3,3 +3,4 @@
 @import "./modules/mainContent/mainContent.css";
 @import "./modules/leftNav/leftNav.css";
 @import "./modules/mainContent/mainContent.css";
+@import './modules/rightNav/rightNav.css';
