--- a/modules/rightNav/rightNav.css
+++ b/modules/rightNav/rightNav.css
@@ -1,22 +1,94 @@
-.rightNav-modal {
+#rightNav {
   position: absolute;
-  top: 0;
-  right: 5em;
+  top: 1em;
+  right: 6em;
+  z-index: 1;
   background-color: #fff;
-  padding: 1em 0;
-  width: 20em;
-  border: 0.5px solid #CCCCCC;
+  height: auto;
   box-shadow: 0px 0px 2px 0px #00000033; 
 }
 
-.rightNav-modal a {
+.rightNav-modal {
+  display: none;
+  padding: 1em 0;
+  width: 20em;
+  border: 0.5px solid #CCCCCC;
+}
+
+#rightNav a {
   display: block;
   padding: 1em;
-  /* margin-bottom: 1em; */
+  margin-bottom: 0.5em;
   text-decoration: none;
   color: #000;
 }
 
-.rightNav-modal a:hover {
-  background-color: #E8EAED;
+#rightNav a:hover {
+  background-color: #E5E5E5;
+}
+
+.rightNav-modal i {
+  color: #5A5A5A;
+  vertical-align: middle;
+  margin-right: 2em;
+  font-size: 1.4em;
+}
+
+.rightNav-modal > a:nth-child(4) > i {
+  margin-right: 1.8em;
+}
+
+.rightNav-modal > a:nth-child(3) > i {
+  margin-right: 2.5em;
+}
+
+.rightNav-modal > a:nth-child(2) {
+  border-top: 1px solid #CCCCCC;
+}
+
+.rightNav-modal > div {
+  display: grid;
+  grid-template-columns: 0.5fr 2.5fr;
+  margin: 0.5em 1em 1em;
+}
+
+#userName {
+  line-height: 2em;
+}
+
+#theme > i:nth-child(2) {
+  margin: 0 0 0 2.5em;
+}
+
+#overlay {
+  display: none; 
+  position: fixed; 
+  top: 0;
+  width: 100%; 
+  height: 100%; 
+  background-color: #f3f3f48a; 
+}
+
+#themeModal {
+  display: none;
+  padding: 1em 0;
+  width: 20em;
+  border: 0.5px solid #CCCCCC;
+}
+
+#themeModal i {
+  margin-right: 1em;
+}
+
+#arrowLeft {
+  margin-left: 1em;
+  cursor: pointer;
+}
+
+#darkTheme {
+  border-top: 1px solid #CCCCCC;
+}
+
+#darkTheme > i {
+  opacity: 0;
 }
