--- a/main.css
+++ b/main.css
@@ -3,4 +3,5 @@
 @import "./modules/mainContent/mainContent.css";
 @import "./modules/leftNav/leftNav.css";
 @import "./modules/mainContent/mainContent.css";
-@import './modules/rightNav/rightNav.css';
+@import "./modules/rightNav/rightNav.css";
+@import "./darkTheme.css";
