--- a/modules/leftNav/leftNav.css
+++ b/modules/leftNav/leftNav.css
@@ -51,7 +51,7 @@
   border-bottom: none;
 }
 
-.user-subscription > strong{
+.user-subscription {
   margin: 0 2em;
   color: #5A5A5A;
   line-height: 2em;
