add watch history page css

--- a/main.css
+++ b/main.css
@@ -6,5 +6,6 @@
 @import "./modules/rightNav/rightNav.css";
 @import "./modules/trendingPage/trending.css";
 @import "./modules/channelPage/channel.css";
+@import "./modules/watchHisoryPage/watchHistory.css";
 @import "./darkTheme.css";
 
