--- a/modules/channelPage/channel.css
+++ b/modules/channelPage/channel.css
@@ -4,7 +4,84 @@
   left: 15em;
   top: 4em;
   width: 80vw;
-  padding-bottom: 5em;
   height: auto;
+  /* padding-bottom: 5em; */
   background-color: #F9F9F9;
+}
+
+.channel-nav {
+  padding: 1em 7em;
+}
+
+.channel-nav > div {
+  display: grid;
+  grid-template-columns: 0.5fr 2fr 1fr 1fr;
+  column-gap: 0.5em;
+  margin-bottom: 2em;
+}
+
+.channel-nav img {
+  font-size: 2em;
+}
+
+.channel-nav span {
+  font-size: 1.2em;
+  font-weight: 550;
+  margin: auto 0;
+}
+
+.channel-nav button {
+  height: 3em;
+  background-color: #065FD4;
+  color: #fff;
+  border: unset;
+  font-weight: 700;
+  width: fit-content;
+  padding: 0 1.5em;
+  margin: auto;
+}
+
+.channel-nav > nav > a {
+  font-weight: 600;
+  padding: 1em 1.5em;
+  text-decoration: none;
+}
+
+.channel-nav > nav > a:hover {
+  background-color: #F1F1F1;
+  border-bottom: 3px solid #606060;
+}
+
+.homepage {
+  background-color: #F1F1F1;
+  height: 34em;
+  text-align: center;
+}
+
+.homepage img {
+  margin-top: 4em;
+  width: 12em;
+  height: 12em;
+}
+
+.homepage button {
+  display: block;
+  margin:  2em auto;
+  height: 3em;
+  background-color: #065FD4;
+  color: #fff;
+  border: unset;
+  font-weight: 700;
+  width: fit-content;
+  padding: 0 1.5em;
+}
+
+.homepage p {
+  font-size: 1.5em;
+  margin-bottom: 0.5em;
+}
+
+.homepage span {
+  color: #606060;
+  font-size: 0.9em;
 }
