--- a/modules/rightNav/rightNav.css
+++ b/modules/rightNav/rightNav.css
@@ -56,16 +56,17 @@
   line-height: 2em;
 }
 
-#theme > i:nth-child(2) {
+#theme > i:nth-child(3) {
   margin: 0 0 0 2.5em;
 }
 
 #overlay {
-  display: none; 
-  position: fixed; 
-  top: 0;
-  width: 100%; 
-  height: 100%; 
+  display: none;
+  position: fixed;
+  top: 4em;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
   background-color: #f3f3f48a; 
 }
 
