add active pages css

--- a/main.css
+++ b/main.css
@@ -7,5 +7,6 @@
 @import "./modules/trendingPage/trending.css";
 @import "./modules/channelPage/channel.css";
 @import "./modules/watchHisoryPage/watchHistory.css";
+@import "./modules/activePage/activePage.css";
 @import "./darkTheme.css";
 
