--- a/modules/topNav/topNav.css
+++ b/modules/topNav/topNav.css
@@ -2,6 +2,7 @@ body {
   box-sizing: border-box;
   font-family: Roboto, Noto, sans-serif;
   margin: 0;
+  background-color: #F9F9F9;
 }
 
 .top-nav {
