-remove top position -add relative width measurement to channel page

--- a/modules/channelPage/channel.css
+++ b/modules/channelPage/channel.css
@@ -1,9 +1,7 @@
 .channel-page {
   position: relative;
   left: 15em;
-  top: 4em;
-  width: 80vw;
-  height: auto;
+  width: 100%;
   background-color: #F9F9F9;
 }
 
