--- a/modules/watchHisoryPage/watchHistory.css
+++ b/modules/watchHisoryPage/watchHistory.css
@@ -1,10 +1,8 @@
 .watch-history {
   position: relative;
   left: 15em;
-  top: 4em;
+  width: 100%;
   padding-bottom: 2em;
-  height: auto;
-  width: 80vw;
   background-color: #F9F9F9;
 }
 
