--- a/modules/channelPage/channel.css
+++ b/modules/channelPage/channel.css
@@ -1,7 +1,7 @@
 .channel-page {
   position: relative;
   left: 15em;
-  width: 100%;
+  width: 80vw;
   background-color: #F9F9F9;
 }
 
@@ -26,7 +26,7 @@
   margin: auto 0;
 }
 
-.channel-nav button {
+.channel-page button {
   height: 3em;
   background-color: #065FD4;
   color: #fff;
@@ -35,6 +35,7 @@
   width: fit-content;
   padding: 0 1.5em;
   margin: auto;
+  cursor: pointer;
 }
 
 .channel-nav > nav > a {
@@ -65,16 +66,9 @@
   display: none;
 }
 
-.homepage button {
+.homepage > button {
   display: block;
-  margin:  2em auto;
-  height: 3em;
-  background-color: #065FD4;
-  color: #fff;
-  border: unset;
-  font-weight: 700;
-  width: fit-content;
-  padding: 0 1.5em;
+  margin: 2em auto;
 }
 
 .homepage p {
