--- a/modules/homePage/homePage.css
+++ b/modules/homePage/homePage.css
@@ -2,15 +2,20 @@
   position: relative;
   top: 4em;
   display: grid;
-  grid-template-columns: 1fr 2fr;
+  grid-template-columns: 15em 2fr;
   width: 100%;
   height: auto;
   overflow-x: hidden;
 }
 
+.wide {
+  top: 3.7em;
+  display: grid;
+  grid-template-columns: 5em 2fr;
+  font-size: 1.1em;
+}
+
 .home-page {
-  position: relative;
-  left: 15em;
   width: 100%;
   background-color: #F9F9F9;
 }
