comment out unused css

--- a/modules/homePage/homePage.css
+++ b/modules/homePage/homePage.css
@@ -47,10 +47,10 @@
   gap: 1.2em;
 }
 
-.video-widescreen {
+/* .video-widescreen {
   padding: 1.5em 1.8em;
   font-size: 1.12em;
-}
+} */
 
 .video-gallery > div {
   height: 17em;
