add small screen homepage css

--- a/smallScreen.css
+++ b/smallScreen.css
@@ -3,10 +3,9 @@
     display: none;
   }
 
-  /* .top-nav {
-    height: 4em;
-    background-color: #4048b4;
-  } */
+  #profilePhoto {
+    margin-left: 3.5em;
+  }
 
   .primary-topNav {
     margin-left: 0;
@@ -20,20 +19,18 @@
     display: none;
   }
 
-  /* leftnav */
+  /* leftnav and homepage*/
 
   .leftside-nav {
     display: none;
   }
 
   .grid-container {
-    /* display: block; */
     grid-template-columns: 0 1fr;
   }
 
   .video-gallery {
     grid-template-columns: 1fr;
-    /* background-color: lawngreen; */
     padding: 0;
     row-gap: 4em;
   }
@@ -50,5 +47,140 @@
   .about-video {
     grid-template-columns: 3em 2fr;
     margin: 0.5em 0 0 1em;
+  }
+
+  .home-page {
+    padding-bottom: 10em;
+  }
+
+  #leftSideNav {
+    display: inline;
+    bottom: 0em;
+    background-color: #fff;
+    box-shadow: 0px 0px 2px 0px #00000033; 
+    z-index: 1;
+    width: 100%;
+    height: 4em;
+  }
+
+  #leftSideNav > a {
+    display: inline-grid;
+    width: 4em;
+    height: 3em;
+    vertical-align: middle;
+    margin: 0.5em 0;
+    padding: 0 1.2em;
+  }
+
+  #leftSideNav > a:nth-child(2) {
+    padding-top: 0.4em;
+  }
+
+  #leftSideNav i {
+    margin: 0;
+  }
+  
+  #leftSideNav small {
+    font-size: 0.8em;
+  }
+
+  #leftSideNav > a:hover {
+    color: #ff0000;
+    background-color: transparent;
+  }
+
+  /* rightnav */
+  #rightNav {
+    top: 0em;
+  }
+
+  /* trending */
+  .trending-nav {
+    grid-template-columns: 6em 6em 6em 6em;
+    border-bottom: none;
+  }
+
+  .trending-nav img {
+    height: 3.5em;
+  }
+  
+  .trending-nav a {
+    width: 5em;
+    margin: 0.5em;
+  }
+  
+  .trending-nav span {
+    font-size: 0.7em;
+  }
+
+  #trends {
+    margin: 0;
+    padding-bottom: 4em;
+  }
+
+  .trending-video {
+    display: block;
+    margin-bottom: 0.2em;
+  }
+
+  .video {
+    width: auto;
+    height: auto;
+  }
+
+  .video-info {
+    width: 25em;
+    padding: 0 1em;
+  }
+
+  /* channel */
+
+  .channel-nav {
+    padding: 1em 0;
+  }
+  
+  .channel-nav > div {
+    padding-left: 2em;
+    grid-template-columns: 3.5em 1fr;
+  }
+  
+  .channel-nav img {
+    font-size: 1.5em;
+  }
+  
+  .channel-nav span {
+    font-weight: 500;
+  }
+  
+  .channel-page button {
+    display: none;
+  }
+  
+  .channel-nav > nav > a {
+    font-weight: 500;
+    padding: 1em 1.5em;
+  }
+
+  .channel-nav > nav > nav {
+    display: none;
+  }
+
+  .homepage {
+    padding: 0 1em;
+  }
+
+  .homepage > button {
+    display: block;
+    margin: 2em auto;
+  }
+
+  #showMore {
+    display: inline;
+    vertical-align: middle;
+  }
+
+  .channel-nav > nav > a:hover {
+    background-color: transparent;
+    border-bottom: 3px solid #FF0000;
   }
 }
