add display none to button nav overfow content

--- a/smallScreen.css
+++ b/smallScreen.css
@@ -25,6 +25,10 @@
     display: none;
   }
 
+  .button-nav > nav {
+    display: none;
+  }
+
   .grid-container {
     grid-template-columns: 0 1fr;
   }
