add settings event listener

--- a/modules/settingsPage/settings.css
+++ b/modules/settingsPage/settings.css
@@ -1,7 +1,7 @@
 .settings-container {
   position: relative;
   top: 4em;
-  display: none;
+  display: grid;
   grid-template-columns: 15em 2fr;
   width: 100%;
   height: auto;
