--- a/modules/defaultPage/leftNav/leftNav.css
+++ b/modules/defaultPage/leftNav/leftNav.css
@@ -20,7 +20,7 @@
   height: 3em;
   line-height: 3em;
   color: #5A5A5A;
-  font-weight: 600;
+  /* font-weight: 600; */
 }
 
 .leftside-nav a:hover {
