--- a/modules/rightNav/rightNav.css
+++ b/modules/rightNav/rightNav.css
@@ -90,11 +90,11 @@
   cursor: pointer;
 }
 
-#darkTheme {
+#darkThemeButton {
   border-top: 1px solid #CCCCCC;
 }
 
-#darkTheme > i {
+#darkThemeButton > i {
   opacity: 0;
 }
 
