--- a/modules/topNav/topNav.css
+++ b/modules/topNav/topNav.css
@@ -26,10 +26,10 @@ body {
 .burger-icon {
   font-size: 1.2em;
   color: #606060;
+  margin-right: 1.5em;
 }
 
 .logo {
-  margin-left: 1.5em;
   color: #000;
   font-size: 1.2em;
   text-decoration: none;
