update imports file path

--- a/assets/main.css
+++ b/assets/main.css
@@ -1,13 +1,13 @@
 @import "https://fonts.googleapis.com/icon?family=Material+Icons";
-@import "./modules/topNav/topNav.css";
-@import "./modules/defaultPage/leftNav/leftNav.css";
-@import "./modules/rightNav/rightNav.css";
-@import "./modules/defaultPage/homePage/homePage.css";
-@import "./modules/defaultPage/trendingPage/trending.css";
-@import "./modules/defaultPage/watchHisoryPage/watchHistory.css";
-@import "./modules/defaultPage/channelPage/channel.css";
-@import "./modules/settingsPage/leftNav/nav.css";
-@import "./modules/settingsPage/accountPage/account.css";
-@import "./modules/settingsPage/modalLeftNav/modalLeftNav.css";
-@import "./smallScreen.css";
+@import "../modules/topNav/topNav.css";
+@import "../modules/rightNav/rightNav.css";
+@import "../modules/homePage/defaultPage/defaultPage.css";
+@import "../modules/homePage/defaultLeftNav/defaultLeftNav.css";
+@import "../modules/homePage/trendingPage/trendingPage.css";
+@import "../modules/homePage/watchHisoryPage/watchHistoryPage.css";
+@import "../modules/homePage/channelPage/channelPage.css";
+@import "../modules/settingsPage/accountPage/accountPage.css";
+@import "../modules/settingsPage/settingsLeftNav/settingsNav.css";
+@import "../modules/settingsPage/modalLeftNav/modalLeftNav.css";
+@import "../smallScreen.css";
 @import "./darkTheme.css";
