--- a/modules/homePage/defaultLeftNav/defaultLeftNav.css
+++ b/modules/homePage/defaultLeftNav/defaultLeftNav.css
@@ -14,16 +14,18 @@
   overflow: hidden;
 }
 
-.leftside-nav a {
+.leftside-nav button {
   display: block;
-  text-decoration: none;
+  width: 100%;
+  text-align: justify;
   height: 3em;
   line-height: 3em;
   color: #5A5A5A;
+  font-size: 1em;
   font-weight: 700;
 }
 
-.leftside-nav a:hover {
+.leftside-nav button:hover {
   background-color: #E5E5E5;
 }
 
@@ -76,22 +78,26 @@
   height: 100vh;
 }
 
-#leftSideNav > a {
+#leftSideNav > button {
   display: block;
-  text-decoration: none;
+  width: 100%;
   padding: 0.8em 0;
   color: #606060;
-  text-align: center;
 }
 
 #leftSideNav i {
   margin: auto 1em;
 }
 
-#leftSideNav small {
-  font-size: 0.6em;
+#leftSideNav > button.trending i {
+  font-size: 1.2em;
+  margin: auto 1.2em;
 }
 
-#leftSideNav > a:hover {
+#leftSideNav > button.trending {
+  padding: 1.2em 0;
+}
+
+#leftSideNav > button:hover {
   background-color: #f5f5f5;
 }
