--- a/modules/rightNav/rightNav.css
+++ b/modules/rightNav/rightNav.css
@@ -5,6 +5,7 @@
   z-index: 1;
   background-color: #ffffff;
   height: auto;
+  width: auto;
   box-shadow: 0px 0px 2px 0px #00000033; 
 }
 
@@ -15,34 +16,34 @@
   border: 0.5px solid #CCCCCC;
 }
 
-#rightNav a {
-  display: block;
-  padding: 1em;
-  margin-bottom: 0.5em;
-  text-decoration: none;
-  color: #000;
+.rightNav-modal > button {
+  height: 3.2em;
+  text-align: left;
+  width: 100%;
+  padding: 0 1.5em;
+  font-size: 1em;
 }
 
-#rightNav a:hover {
+#rightNav button:hover {
   background-color: #E5E5E5;
 }
 
 .rightNav-modal i {
   color: #5A5A5A;
   vertical-align: middle;
-  margin-right: 2em;
+  margin-right: 1.3em;
   font-size: 1.4em;
 }
 
-.rightNav-modal > a:nth-child(4) > i {
+.rightNav-modal > button:nth-child(3) > i {
   margin-right: 1.8em;
 }
 
-.rightNav-modal > a:nth-child(3) > i {
-  margin-right: 2.5em;
+.rightNav-modal > button:nth-child(5) > i {
+  margin-right: 1.7em;
 }
 
-.rightNav-modal > a:nth-child(2) {
+.rightNav-modal > button:nth-child(2) {
   border-top: 1px solid #CCCCCC;
 }
 
@@ -60,7 +61,7 @@
   line-height: 2.5em;
 }
 
-#theme > i:nth-child(3) {
+#themeModalButton > i:nth-child(3) {
   margin: 0 0 0 2.5em;
 }
 
@@ -81,6 +82,14 @@
   border: 0.5px solid #CCCCCC;
 }
 
+#themeModal > button {
+  height: 3.2em;
+  text-align: left;
+  width: 100%;
+  padding: 0 1.5em;
+  font-size: 1em;
+}
+
 #themeModal i {
   margin-right: 1em;
 }
@@ -99,7 +108,6 @@
 }
 
 #closeModalButton {
-  border: unset;
   width: 2em;
   height: 2em;
   font-size: 1.1em;
