import notificationPage css

--- a/assets/main.css
+++ b/assets/main.css
@@ -7,6 +7,7 @@
 @import "../modules/homePage/watchHisoryPage/watchHistoryPage.css";
 @import "../modules/homePage/channelPage/channelPage.css";
 @import "../modules/settingsPage/accountPage/accountPage.css";
+@import "../modules/settingsPage/notificationPage/notificationPage.css";
 @import "../modules/settingsPage/settingsLeftNav/settingsNav.css";
 @import "../modules/settingsPage/modalLeftNav/modalLeftNav.css";
 @import "../smallScreen.css";
