import performancePage css

--- a/assets/main.css
+++ b/assets/main.css
@@ -8,6 +8,7 @@
 @import "../modules/homePage/channelPage/channelPage.css";
 @import "../modules/settingsPage/accountPage/accountPage.css";
 @import "../modules/settingsPage/notificationPage/notificationPage.css";
+@import "../modules/settingsPage/performancePage/performancePage.css";
 @import "../modules/settingsPage/settingsLeftNav/settingsNav.css";
 @import "../modules/settingsPage/modalLeftNav/modalLeftNav.css";
 @import "../smallScreen.css";
