--- a/modules/homePage/defaultLeftNav/defaultLeftNav.css
+++ b/modules/homePage/defaultLeftNav/defaultLeftNav.css
@@ -19,7 +19,6 @@
   width: 100%;
   text-align: justify;
   height: 3em;
-  line-height: 3em;
   color: #5A5A5A;
   font-size: 1em;
   font-weight: 700;
@@ -83,6 +82,7 @@
   width: 100%;
   padding: 0.8em 0;
   color: #606060;
+  outline: none;
 }
 
 #leftSideNav i {
