- add font weight - change color

--- a/modules/settingsPage/accountPage/accountPage.css
+++ b/modules/settingsPage/accountPage/accountPage.css
@@ -32,7 +32,8 @@
   display: block;
   text-decoration: none;
   padding: 0.5em 0;
-  color: #065FDB;
+  color: #0666D5;
+  font-weight: 550;
 }
 
 .secondary span {
