--- a/assets/darkTheme.css
+++ b/assets/darkTheme.css
@@ -266,3 +266,23 @@
 .dark .primary, .dark .secondary {
   border-bottom: 1px solid #303030;
 }
+
+.dark .notification-page {
+  color: #fff;
+}
+
+.dark .notification-page small {
+  color: #ffffffa8;
+}
+
+.dark .general-notification {
+  border-bottom: 1px solid #303030;
+}
+
+.dark .slider {
+  background-color: #3C3C3C;
+}
+
+.dark .slider::before {
+  background-color: #3EA6FF;
+}
