--- a/smallScreen.css
+++ b/smallScreen.css
@@ -7,10 +7,6 @@
     margin-left: 3.5em;
   }
 
-  .primary-topNav {
-    margin-left: 0;
-  }
-  
   .search-form {
     display: none;
   }
@@ -67,28 +63,31 @@
     height: 4em;
   }
 
-  #leftSideNav > a {
-    display: inline-grid;
-    width: 4em;
+  #leftSideNav > button {
+    display: inline;
+    width: 7em;
     height: 3em;
     vertical-align: middle;
-    margin: 0.5em 0;
-    padding: 0 1.2em;
+    margin: 0.5em 0.5em;
+    padding: 0 2em;
+    /* background-color: burlywood; */
   }
 
-  #leftSideNav > a:nth-child(2) {
-    padding-top: 0.4em;
+  #leftSideNav > button:nth-child(2) {
+    width: 4em;
+    line-height: 1.5em;
+    padding-top: 0.5em;
   }
 
   #leftSideNav i {
     margin: 0;
   }
-  
+
   #leftSideNav small {
     font-size: 0.8em;
   }
 
-  #leftSideNav > a:hover {
+  #leftSideNav > button:hover {
     color: #ff0000;
     background-color: transparent;
   }
