--- a/assets/main.css
+++ b/assets/main.css
@@ -10,5 +10,6 @@
 @import "../modules/settingsPage/notificationPage/notificationPage.css";
 @import "../modules/settingsPage/performancePage/performancePage.css";
 @import "../modules/settingsPage/settingsLeftNav/settingsNav.css";
+@import "../modules/videosPage/videoPage.css";
 @import "../smallScreen.css";
 @import "./darkTheme.css";
